[package]
name = "tomt_bevycss"
version = "0.5.0"
edition = "2021"
categories = ["game-development", "gui", "web-programming"]
description = "Expansion and fixes based on bevy_ecss. Allows for using a slightly wider subset of CSS to interact with Bevy ECS. Now on Bevy 0.11!"
exclude = [".github/"]
keywords = ["css", "bevy", "style", "theme", "ui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheBeardedQuack/tomt_bevycss.git"
documentation = "https://docs.rs/tomt_bevycss"
homepage = "https://crates.io/crates/tomt_bevycss"

[features]
default = ["pseudo_class"]
monitor_changes = []
pseudo_class = ["monitor_changes"]
pseudo_prop = ["pseudo_class"]
sass = ["dep:grass"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
] }
smallvec = { version = "1.10", features = ["serde", "union", "const_generics"] }
cssparser = "0.30.0"
grass = { version = "0.13.1", optional = true }

[dev-dependencies]
bevy = { version = "0.11", features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
    "filesystem_watcher",
] }
#bevy_editor_pls = "0.4.0"

[[example]]
name = "simple_ui"
path = "examples/simple_ui.rs"

#[[example]]
#name = "hot_reload"
#path = "examples/hot_reload.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "theme"
path = "examples/theme.rs"

[[example]]
name = "alpha"
path = "examples/alpha.rs"
