[package]
name = "tomt_bevycss"
version = "0.6.1"
edition = "2021"
authors = ["TheBeardedQuack", "Tome of Many Things"]
categories = ["game-development", "gui", "web-programming"]
description = "Expansion and fixes based on bevy_ecss. Allows for using a slightly wider subset of CSS to interact with Bevy ECS. Now on Bevy 0.13!"
exclude = [".github/"]
keywords = ["css", "bevy", "style", "theme", "ui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/TheBeardedQuack/tomt_bevycss.git"
documentation = "https://docs.rs/tomt_bevycss"
homepage = "https://crates.io/crates/tomt_bevycss"

[features]
default = ["pseudo_class"]
monitor_changes = []
pseudo_class = ["monitor_changes"]
pseudo_prop = ["pseudo_class"]

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
] }
smallvec = { version = "1.13.2", features = ["serde", "union", "const_generics"] }
cssparser = "0.34.0"

[dev-dependencies]
bevy_editor_pls = "0.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy = { version = "0.13.2", features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
    "file_watcher",
] }

[[example]]
name = "simple_ui"
path = "examples/simple_ui.rs"

[[example]]
name = "hot_reload"
path = "examples/hot_reload.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "theme"
path = "examples/theme.rs"

[[example]]
name = "alpha"
path = "examples/alpha.rs"
